laborations/lab1/testsuite/bad/bad076.cc
(cout << 5) bar () {}
